about y cards actualizados

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Noelia Valle | Diseñadora UX/UI & Desarrolladora Full Stack Junior</title>
-<meta name="description" content="Soy Noelia Valle, profesional en diseño UX/UI y desarrollo full stack. Explorá mi portfolio para ver mis proyectos y experiencia en el diseño de experiencias digitales." />
-<meta name="keywords" content="Noelia Valle, UX/UI, Full Stack, Diseño, Portfolio, Rosario, Argentina" />
+<meta name="description" content="Soy Noelia Valle, profesional en diseño UX/UI. Explorá mi portfolio para ver mis proyectos y experiencia." />
+<meta name="keywords" content="Noelia Valle, Diseño UX/UI, Portfolio, Rosario, Argentina" />
 <meta name="author" content="Noelia Valle">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
